Fix and refactor batch code
